syntax = "proto3";
package helloworld;

service Greeter {
    rpc Send(HelloRequest) returns (HelloReply) {}
    rpc SendStream(HelloRequest) returns (stream HelloReply) {}
    rpc ReceiveStream(stream HelloRequest) returns (HelloReply) {}
    rpc Bidirectional(stream HelloRequest) returns (stream HelloReply) {}

}

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}
